# Cairn-Memory

./: .gitignore  AGENTS.md  QWEN.md  README.md  README.zh-CN.md  pyproject.toml
docs/: DECISIONS.md  acceptance-pack-v0-closeout-2026-06-15.md  acceptance-pack-v0.md  cairn-memory-phase-b-charter-2026-06-15.md  cairn-memory-phase-c-charter.md  cli-only-claude-code-v1-closeout-2026-06-15.md  cli-only-claude-code-v1-dogfood-cadence.md  cli-only-claude-code-v1-eval-semantics.md  cli-only-claude-code-v1-failure-loop-2026-06-15.md  cli-only-claude-code-v1-g6-robust-2026-06-15.md  cli-only-claude-code-v1-l1-5-completion-2026-06-15.md  cli-only-claude-code-v1-readiness.md  cli-only-claude-code-v1-release-notes.md  cli-only-claude-code-v1-runbook.md  cli-only-claude-code-v1-verify-reason-codes.md  customer-trial.md  demo.md  dogfood-acceptance-pack-v0.md  dogfood-acceptance-record-template.md  dogfood-known-failure-ab-template.md  dogfood-real-project-validation-2026-06-13.md  dogfood-stage-acceptance-2026-06-14.md  dogfood-unihack-experience-loop-2026-06-13.md  experience-memory-v0.md  experience-note-lifecycle-closeout-2026-06-15.md  failure-memory-v0.md  omniagent-phase-c-charter.md  opencode-dogfood-2026-06-15.md  phase-c-final-delivery-2026-06-16.md  qwen-code-v0-adapter-2026-06-17.md  spike-report-template.md  spike-report.md  spike-scenarios.md  v02-closeout-audit-2026-06-14.md  v03-closeout-audit-2026-06-14.md  v03-stage-report-2026-06-14.md  v04-closeout-audit-2026-06-14.md  v04-verify-polish-plan.md  v05-closeout-audit-2026-06-14.md  week2-go-no-go.md  (+2 more)
src/omni/: cli.py  (+32 more)
(+101 files in other folders)
