[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnimemory"
version = "0.1.0"
description = "Local CLI-only memory loop for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
omni = "omni.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omni = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
