[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-memory"
version = "0.1.0"
description = "Local governed memory layer for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cairn = "omni.cli:main"
omni = "omni.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
omni = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
